<resources>
    <string name="app_name">ContactsManager</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="call">Call</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="add_button">Add button</string>
    <string name="email_text">Email</string>
</resources>